--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -26,7 +26,7 @@ SETTINGS_BREAKINGFORCE,制动力
 SETTINGS_OFFSET,摄像机偏移
 SETTINGS_KEYUUITOGGLE,切换主面板
 SETTINGS_KEYLIGHTTOGGLE,切换灯光
-MAINPANELBTN_TOOLTIP,IOperate It! Revisited
+MAINPANELBTN_TOOLTIP,IOperateIt Revisited
 DRIVEBTN_TOOLTIP,开始驾驶
 SPAWNBTN_TEXT,生成车辆
 ROAD_SELECT,选择一段道路以开始驾驶
