New Crowdin updates (#3)

--- a/IOperateIt/Translations/tr-TR.csv
+++ b/IOperateIt/Translations/tr-TR.csv
@@ -1,7 +1,7 @@
-﻿"LANGUAGE","한국어","Language name (in native language).  This means the NAME OF THE LANGUAGE BEING TRANSLATED INTO, and should NOT be a translation of the word 'English'"
-"WHATSNEW_L1","이 메시지는 모드가 업데이트 되었음을 알려드리기 위한 것입니다.",""
+﻿"LANGUAGE","Türkçe","Language name (in native language).  This means the NAME OF THE LANGUAGE BEING TRANSLATED INTO, and should NOT be a translation of the word 'English'"
+"WHATSNEW_L1","This message is just to let you know that the mod has been updated.",""
 "WHATSNEW_L2","For a detailed list of changes, please visit the Steam Workshop or GitHub.",""
-"WHATSNEW_L3","당신의 사용과 지원에 감사합니다!",""
+"WHATSNEW_L3","Thank you for your use and support!",""
 "MOD_DESCRIPTION","Drive vehicles around your very own city!",""
 "SETTINGS_MAXVELOCITY","Maximum velocity",""
 "SETTINGS_ACCELERATIONFORCE","Acceleration force",""
