--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -7,7 +7,7 @@
 "SETTINGS_ACCELERATIONFORCE","加速度",""
 "SETTINGS_BREAKINGFORCE","转向制动力",""
 "SETTINGS_OFFSET","摄像机偏移",""
-"SETTINGS_KEYUUITOGGLE","切换主面板",""
+"SETTINGS_KEYUUITOGGLE","切换主面板（需UUI模组）",""
 "SETTINGS_KEYLIGHTTOGGLE","切换灯光",""
 "MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
 "DRIVEBTN_TOOLTIP","开始驾驶",""
