--- a/IOperateIt/Translations/es-ES.csv
+++ b/IOperateIt/Translations/es-ES.csv
@@ -1,15 +1,15 @@
 ﻿"LANGUAGE","Español","Language name (in native language).  This means the NAME OF THE LANGUAGE BEING TRANSLATED INTO, and should NOT be a translation of the word 'English'"
-"WHATSNEW_L1","This message is just to let you know that the mod has been updated.",""
-"WHATSNEW_L2","For a detailed list of changes, please visit the Steam Workshop or GitHub.",""
-"WHATSNEW_L3","Thank you for your use and support!",""
-"MOD_DESCRIPTION","Drive vehicles around your very own city!",""
-"SETTINGS_MAXVELOCITY","Maximum velocity",""
-"SETTINGS_ACCELERATIONFORCE","Acceleration force",""
-"SETTINGS_BREAKINGFORCE","Steering braking force",""
-"SETTINGS_OFFSET","Camera offset",""
-"SETTINGS_KEYUUITOGGLE","Toggle main panel (need to subscribe to UUI mod)",""
-"SETTINGS_KEYLIGHTTOGGLE","Toggle Light",""
-"MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
-"DRIVEBTN_TOOLTIP","Start driving",""
-"SPAWNBTN_TEXT","Spawn vehicle",""
-"ROAD_SELECT","Select a road segment to start driving",""
+"WHATSNEW_L1","Este mensaje es solo para informarle que el mod se ha actualizado.",""
+"WHATSNEW_L2","Para obtener una lista detallada de los cambios, consulte Steam Workshop o GitHub.",""
+"WHATSNEW_L3","¡Gracias por su uso y apoyo!",""
+"MOD_DESCRIPTION","¡Conduce vehículos por tu ciudad!",""
+"SETTINGS_MAXVELOCITY","Velocidad máxima",""
+"SETTINGS_ACCELERATIONFORCE","Fuerza de aceleración",""
+"SETTINGS_BREAKINGFORCE","Fuerza de frenar",""
+"SETTINGS_OFFSET","Desplazamiento de cámara",""
+"SETTINGS_KEYUUITOGGLE","Toggle main panel (requires UUI mod)",""
+"SETTINGS_KEYLIGHTTOGGLE","Alternar luz",""
+"MAINPANELBTN_TOOLTIP","IOperateIt revisado",""
+"DRIVEBTN_TOOLTIP","Empieza a conducir",""
+"SPAWNBTN_TEXT","Vehículo de generación",""
+"ROAD_SELECT","Seleccione un segmento de camino para empezar conducir",""
