--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -6,12 +6,12 @@
 "SETTINGS_MAXVELOCITY","最大速度",""
 "SETTINGS_ACCELERATIONFORCE","加速度",""
 "SETTINGS_BREAKINGFORCE","转向制动力",""
-"SETTINGS_BUILDINGCOLLISION","建筑碰撞"
-"SETTINGS_VEHICLECOLLISION","车辆碰撞"
+"SETTINGS_BUILDINGCOLLISION","建筑碰撞",""
+"SETTINGS_VEHICLECOLLISION","车辆碰撞",""
 "SETTINGS_OFFSET","摄像机偏移",""
 "SETTINGS_KEYUUITOGGLE","切换主面板（需UUI模组）",""
 "SETTINGS_KEYLIGHTTOGGLE","切换车头灯",""
-"SETTINGS_KEYSIRENTOGGLE","为特种车辆切换警报器"
+"SETTINGS_KEYSIRENTOGGLE","为特种车辆切换警报器",""
 "MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
 "DRIVEBTN_TOOLTIP","开始驾驶",""
 "SPAWNBTN_TEXT","生成车辆",""
