--- a/IOperateIt/Translations/es-ES.csv
+++ b/IOperateIt/Translations/es-ES.csv
@@ -4,7 +4,7 @@
 "WHATSNEW_L3","¡Gracias por su uso y apoyo!",""
 "MOD_DESCRIPTION","¡Conduce vehículos por tu ciudad!",""
 "SETTINGS_MAXVELOCITY","Velocidad máxima",""
-"SETTINGS_ACCELERATIONFORCE","Fuerza de aceleración",""
+"SETTINGS_ENGINEPOWER","Fuerza de aceleración",""
 "SETTINGS_BREAKINGFORCE","Fuerza de frenar",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
