--- a/IOperateIt/Translations/pt-BR.csv
+++ b/IOperateIt/Translations/pt-BR.csv
@@ -4,7 +4,7 @@
 "WHATSNEW_L3","Obrigado por seu uso e suporte!",""
 "MOD_DESCRIPTION","Ande veículos em volta de sua própria cidade!",""
 "SETTINGS_MAXVELOCITY","Velocidade Máxima",""
-"SETTINGS_ACCELERATIONFORCE","Força de aceleração",""
+"SETTINGS_ENGINEPOWER","Força de aceleração",""
 "SETTINGS_BREAKINGFORCE","Força de frenagem",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
