--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -4,7 +4,7 @@
 "WHATSNEW_L3","感谢您的使用及支持！",""
 "MOD_DESCRIPTION","在自己的城市中驾驶",""
 "SETTINGS_MAXVELOCITY","最大速度",""
-"SETTINGS_ACCELERATIONFORCE","加速度",""
+"SETTINGS_ENGINEPOWER","加速度",""
 "SETTINGS_BREAKINGFORCE","转向制动力",""
 "SETTINGS_BUILDINGCOLLISION","建筑碰撞",""
 "SETTINGS_VEHICLECOLLISION","车辆碰撞",""
