--- a/IOperateIt/Translations/id-ID.csv
+++ b/IOperateIt/Translations/id-ID.csv
@@ -4,8 +4,8 @@
 "WHATSNEW_L3","Thank you for your use and support!",""
 "MOD_DESCRIPTION","Drive vehicles around your very own city!",""
 "SETTINGS_MAXVELOCITY","Maximum velocity",""
-"SETTINGS_ACCELERATIONFORCE","Acceleration force",""
-"SETTINGS_BREAKINGFORCE","Braking force",""
+"SETTINGS_ENGINEPOWER","Engine Power",""
+"SETTINGS_BREAKINGFORCE","Braking Force",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
 "SETTINGS_OFFSET","Camera offset",""
