--- a/IOperateIt/Translations/ko-KR.csv
+++ b/IOperateIt/Translations/ko-KR.csv
@@ -4,7 +4,7 @@
 "WHATSNEW_L3","당신의 사용과 지원에 감사합니다!",""
 "MOD_DESCRIPTION","당신이 만든 도시 곳곳을 운전해보세요!",""
 "SETTINGS_MAXVELOCITY","최대 속도",""
-"SETTINGS_ACCELERATIONFORCE","가속력",""
+"SETTINGS_ENGINEPOWER","가속력",""
 "SETTINGS_BREAKINGFORCE","제동력",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
