--- a/IOperateIt/Translations/pl-PL.csv
+++ b/IOperateIt/Translations/pl-PL.csv
@@ -4,8 +4,8 @@
 "WHATSNEW_L3","Dziękuję za korzystanie z moda i wsparcie!",""
 "MOD_DESCRIPTION","Drive vehicles around your very own city!",""
 "SETTINGS_MAXVELOCITY","Maximum velocity",""
-"SETTINGS_ACCELERATIONFORCE","Acceleration force",""
-"SETTINGS_BREAKINGFORCE","Braking force",""
+"SETTINGS_ENGINEPOWER","Engine Power",""
+"SETTINGS_BREAKINGFORCE","Braking Force",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
 "SETTINGS_OFFSET","Camera offset",""
