--- a/IOperateIt/Translations/pt-BR.csv
+++ b/IOperateIt/Translations/pt-BR.csv
@@ -12,7 +12,7 @@
 "SETTINGS_KEYUUITOGGLE","Abrir painel principal (requer mod UUI)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
-"MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
+"MAINPANELBTN_TOOLTIP","IOperateIt+",""
 "DRIVEBTN_TOOLTIP","Começar a dirigir",""
 "SPAWNBTN_TEXT","Invocar Veículo",""
 "ROAD_SELECT","Clique numa parte de uma estrada para começar a dirigir",""
