--- a/IOperateIt/Translations/ko-KR.csv
+++ b/IOperateIt/Translations/ko-KR.csv
@@ -12,7 +12,7 @@
 "SETTINGS_KEYUUITOGGLE","메인 패널 사용(UUI 모드 필요)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
-"MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
+"MAINPANELBTN_TOOLTIP","IOperateIt+",""
 "DRIVEBTN_TOOLTIP","운전 시작",""
 "SPAWNBTN_TEXT","차량 생성",""
 "ROAD_SELECT","운전을 시작할 도로 선택",""
