--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -12,7 +12,7 @@
 "SETTINGS_KEYUUITOGGLE","切换主面板（需UUI模组）",""
 "SETTINGS_KEYLIGHTTOGGLE","切换车头灯",""
 "SETTINGS_KEYSIRENTOGGLE","为特种车辆切换警报器",""
-"MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
+"MAINPANELBTN_TOOLTIP","IOperateIt+",""
 "DRIVEBTN_TOOLTIP","开始驾驶",""
 "SPAWNBTN_TEXT","生成车辆",""
 "ROAD_SELECT","选择一段道路以开始驾驶",""
