remove FPSCamera Dependency, more reliable downhill traction, cleaner build process

--- a/IOperateIt/Translations/es-ES.csv
+++ b/IOperateIt/Translations/es-ES.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","Para obtener una lista detallada de los cambios, consulte Steam Workshop o GitHub.",""
 "WHATSNEW_L3","¡Gracias por su uso y apoyo!",""
 "MOD_DESCRIPTION","¡Conduce vehículos por tu ciudad!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","Velocidad máxima",""
 "SETTINGS_ENGINEPOWER","Fuerza de aceleración",""
-"SETTINGS_BREAKINGFORCE","Fuerza de frenar",""
+"SETTINGS_BRAKINGFORCE","Fuerza de frenar",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
-"SETTINGS_OFFSET","Desplazamiento de cámara",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","Toggle main panel (requires UUI mod)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
