--- a/IOperateIt/Translations/ko-KR.csv
+++ b/IOperateIt/Translations/ko-KR.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","자세한 변경 사항은 Steam 워크샵이나 GitHub를 참조하세요.",""
 "WHATSNEW_L3","당신의 사용과 지원에 감사합니다!",""
 "MOD_DESCRIPTION","당신이 만든 도시 곳곳을 운전해보세요!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","최대 속도",""
 "SETTINGS_ENGINEPOWER","가속력",""
-"SETTINGS_BREAKINGFORCE","제동력",""
+"SETTINGS_BRAKINGFORCE","제동력",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
-"SETTINGS_OFFSET","카메라 오프셋",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","메인 패널 사용(UUI 모드 필요)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
