--- a/IOperateIt/Translations/pl-PL.csv
+++ b/IOperateIt/Translations/pl-PL.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","W celu poznania pełnej listy zmian, sprawdź Steam Workshop lub GitHub.",""
 "WHATSNEW_L3","Dziękuję za korzystanie z moda i wsparcie!",""
 "MOD_DESCRIPTION","Drive vehicles around your very own city!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","Maximum velocity",""
 "SETTINGS_ENGINEPOWER","Engine Power",""
-"SETTINGS_BREAKINGFORCE","Braking Force",""
+"SETTINGS_BRAKINGFORCE","Braking Force",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
-"SETTINGS_OFFSET","Camera offset",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","Toggle main panel (requires UUI mod)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
