--- a/IOperateIt/Translations/pt-BR.csv
+++ b/IOperateIt/Translations/pt-BR.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","Para uma lista detalhada de mudanças, por favor visite a Oficina Steam ou o Github",""
 "WHATSNEW_L3","Obrigado por seu uso e suporte!",""
 "MOD_DESCRIPTION","Ande veículos em volta de sua própria cidade!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","Velocidade Máxima",""
 "SETTINGS_ENGINEPOWER","Força de aceleração",""
-"SETTINGS_BREAKINGFORCE","Força de frenagem",""
+"SETTINGS_BRAKINGFORCE","Força de frenagem",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
-"SETTINGS_OFFSET","Offset da câmera",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","Abrir painel principal (requer mod UUI)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
