--- a/IOperateIt/Translations/en-EN.csv
+++ b/IOperateIt/Translations/en-EN.csv
@@ -2,17 +2,24 @@
 "WHATSNEW_L1","This message is just to let you know that the mod has been updated.",""
 "WHATSNEW_L2","For a detailed list of changes, please visit the Steam Workshop or GitHub.",""
 "WHATSNEW_L3","Thank you for your use and support!",""
-MOD_DESCRIPTION,Drive vehicles around your very own city!
-SETTINGS_MAXVELOCITY,Maximum velocity
-SETTINGS_ENGINEPOWER,Engine Power
-SETTINGS_BREAKINGFORCE,Braking Force
-SETTINGS_BUILDINGCOLLISION,Building collision
-SETTINGS_VEHICLECOLLISION,Vehicle collision
-SETTINGS_OFFSET,Camera offset
-SETTINGS_KEYUUITOGGLE,Toggle main panel (requires UUI mod)
-SETTINGS_KEYLIGHTTOGGLE,Toggle head light
-SETTINGS_KEYSIRENTOGGLE,Toggle siren for special vehicles
-MAINPANELBTN_TOOLTIP,IOperateIt+
-DRIVEBTN_TOOLTIP,Start driving
-SPAWNBTN_TEXT,Spawn vehicle
-ROAD_SELECT,Select a road segment to start driving
+"MOD_DESCRIPTION","Drive vehicles around your very own city!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
+"SETTINGS_MAXVELOCITY","Maximum velocity",""
+"SETTINGS_ENGINEPOWER","Engine Power",""
+"SETTINGS_BRAKINGFORCE","Braking Force",""
+"SETTINGS_BUILDINGCOLLISION","Building collision",""
+"SETTINGS_VEHICLECOLLISION","Vehicle collision",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
+"SETTINGS_KEYUUITOGGLE","Toggle main panel (requires UUI mod)",""
+"SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
+"SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
+"MAINPANELBTN_TOOLTIP","IOperateIt+",""
+"DRIVEBTN_TOOLTIP","Start driving",""
+"SPAWNBTN_TEXT","Spawn vehicle",""
+"ROAD_SELECT","Select a road segment to start driving",""
