--- a/IOperateIt/Translations/id-ID.csv
+++ b/IOperateIt/Translations/id-ID.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","For a detailed list of changes, please visit the Steam Workshop or GitHub.",""
 "WHATSNEW_L3","Thank you for your use and support!",""
 "MOD_DESCRIPTION","Drive vehicles around your very own city!",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","Maximum velocity",""
 "SETTINGS_ENGINEPOWER","Engine Power",""
-"SETTINGS_BREAKINGFORCE","Braking Force",""
+"SETTINGS_BRAKINGFORCE","Braking Force",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
 "SETTINGS_VEHICLECOLLISION","Vehicle collision",""
-"SETTINGS_OFFSET","Camera offset",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","Toggle main panel (requires UUI mod)",""
 "SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
 "SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
