--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -3,12 +3,19 @@
 "WHATSNEW_L2","请访问创意工坊或 GitHub 以获取详细更新日志。",""
 "WHATSNEW_L3","感谢您的使用及支持！",""
 "MOD_DESCRIPTION","在自己的城市中驾驶",""
+"SETTINGS_GROUP_GENERAL","General Settings",""
+"SETTINGS_GROUP_VEHICLE","Vehicle Settings",""
+"SETTINGS_GROUP_CAMERA","Camera Settings",""
+"SETTINGS_GROUP_GAME","Gameplay Settings",""
+"SETTINGS_GROUP_KEYS","Keybinds",""
 "SETTINGS_MAXVELOCITY","最大速度",""
 "SETTINGS_ENGINEPOWER","加速度",""
-"SETTINGS_BREAKINGFORCE","转向制动力",""
+"SETTINGS_BRAKINGFORCE","转向制动力",""
 "SETTINGS_BUILDINGCOLLISION","建筑碰撞",""
 "SETTINGS_VEHICLECOLLISION","车辆碰撞",""
-"SETTINGS_OFFSET","摄像机偏移",""
+"SETTINGS_OFFSET_X","Camera offset X",""
+"SETTINGS_OFFSET_Y","Camera offset Y",""
+"SETTINGS_OFFSET_Z","Camera offset Z",""
 "SETTINGS_KEYUUITOGGLE","切换主面板（需UUI模组）",""
 "SETTINGS_KEYLIGHTTOGGLE","切换车头灯",""
 "SETTINGS_KEYSIRENTOGGLE","为特种车辆切换警报器",""
