--- a/IOperateIt/Translations/en-EN.csv
+++ b/IOperateIt/Translations/en-EN.csv
@@ -15,4 +15,5 @@ SETTINGS_KEYSIRENTOGGLE,Toggle siren for special vehicles
 MAINPANELBTN_TOOLTIP,IOperateIt Revisited
 DRIVEBTN_TOOLTIP,Start driving
 SPAWNBTN_TEXT,Spawn vehicle
+MODSETTINGSBTN_TEXT,Mod settings
 ROAD_SELECT,Select a road segment to start driving
