New Crowdin updates (#7)
* New translations en-en.csv (Korean)

* New translations en-en.csv (Portuguese, Brazilian)

* New translations en-en.csv (German)

* New translations en-en.csv (French)

* New translations en-en.csv (Spanish)

* New translations en-en.csv (Czech)

* New translations en-en.csv (German)

* New translations en-en.csv (Finnish)

* New translations en-en.csv (Hungarian)

* New translations en-en.csv (Italian)

* New translations en-en.csv (Japanese)

* New translations en-en.csv (Korean)

* New translations en-en.csv (Dutch)

* New translations en-en.csv (Polish)

* New translations en-en.csv (Russian)

* New translations en-en.csv (Slovak)

* New translations en-en.csv (Turkish)

* New translations en-en.csv (Ukrainian)

* New translations en-en.csv (Chinese Simplified)

* New translations en-en.csv (Chinese Traditional)

* New translations en-en.csv (Portuguese, Brazilian)

* New translations en-en.csv (Indonesian)

--- a/IOperateIt/Translations/de-DE.csv
+++ b/IOperateIt/Translations/de-DE.csv
@@ -1,9 +1,9 @@
 ﻿"LANGUAGE","Deutsch","Language name (in native language).  This means the NAME OF THE LANGUAGE BEING TRANSLATED INTO, and should NOT be a translation of the word 'English'"
-"WHATSNEW_L1","This message is just to let you know that the mod has been updated.",""
-"WHATSNEW_L2","For a detailed list of changes, please visit the Steam Workshop or GitHub.",""
-"WHATSNEW_L3","Thank you for your use and support!",""
-"MOD_DESCRIPTION","Drive vehicles around your very own city!",""
-"SETTINGS_MAXVELOCITY","Maximum velocity",""
+"WHATSNEW_L1","Diese Nachricht soll Sie nur darüber informieren, dass der Mod aktualisiert wurde.",""
+"WHATSNEW_L2","Für eine detaillierte Liste der Änderungen besuchen Sie bitte den Steam-Workshop oder GitHub.",""
+"WHATSNEW_L3","Vielen Dank für Ihren Einsatz und Ihre Unterstützung!",""
+"MOD_DESCRIPTION","Fahren Sie Fahrzeuge durch Ihre eigene Stadt!",""
+"SETTINGS_MAXVELOCITY","Höchstgeschwindigkeit",""
 "SETTINGS_ACCELERATIONFORCE","Acceleration force",""
 "SETTINGS_BREAKINGFORCE","Steering braking force",""
 "SETTINGS_BUILDINGCOLLISION","Building collision",""
@@ -15,4 +15,5 @@
 "MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
 "DRIVEBTN_TOOLTIP","Start driving",""
 "SPAWNBTN_TEXT","Spawn vehicle",""
+"MODSETTINGSBTN_TEXT","Mod settings",""
 "ROAD_SELECT","Select a road segment to start driving",""
