--- a/IOperateIt/Translations/ko-KR.csv
+++ b/IOperateIt/Translations/ko-KR.csv
@@ -6,13 +6,14 @@
 "SETTINGS_MAXVELOCITY","최대 속도",""
 "SETTINGS_ACCELERATIONFORCE","가속력",""
 "SETTINGS_BREAKINGFORCE","제동력",""
-"SETTINGS_BUILDINGCOLLISION","Building collision",""
-"SETTINGS_VEHICLECOLLISION","Vehicle collision",""
+"SETTINGS_BUILDINGCOLLISION","건물과 충돌",""
+"SETTINGS_VEHICLECOLLISION","차량과 충돌",""
 "SETTINGS_OFFSET","카메라 오프셋",""
 "SETTINGS_KEYUUITOGGLE","메인 패널 사용(UUI 모드 필요)",""
-"SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
-"SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
+"SETTINGS_KEYLIGHTTOGGLE","전조등 사용",""
+"SETTINGS_KEYSIRENTOGGLE","특수 차량에 사이렌 사용",""
 "MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
 "DRIVEBTN_TOOLTIP","운전 시작",""
 "SPAWNBTN_TEXT","차량 생성",""
+"MODSETTINGSBTN_TEXT","Mod settings",""
 "ROAD_SELECT","운전을 시작할 도로 선택",""
