--- a/IOperateIt/Translations/pt-BR.csv
+++ b/IOperateIt/Translations/pt-BR.csv
@@ -6,13 +6,14 @@
 "SETTINGS_MAXVELOCITY","Velocidade Máxima",""
 "SETTINGS_ACCELERATIONFORCE","Força de aceleração",""
 "SETTINGS_BREAKINGFORCE","Força de frenagem",""
-"SETTINGS_BUILDINGCOLLISION","Building collision",""
-"SETTINGS_VEHICLECOLLISION","Vehicle collision",""
+"SETTINGS_BUILDINGCOLLISION","Colisão de construções",""
+"SETTINGS_VEHICLECOLLISION","Colisão de veículos",""
 "SETTINGS_OFFSET","Offset da câmera",""
 "SETTINGS_KEYUUITOGGLE","Abrir painel principal (requer mod UUI)",""
-"SETTINGS_KEYLIGHTTOGGLE","Toggle head light",""
-"SETTINGS_KEYSIRENTOGGLE","Toggle siren for special vehicles",""
+"SETTINGS_KEYLIGHTTOGGLE","Ligar/Desligar Farol",""
+"SETTINGS_KEYSIRENTOGGLE","Ligar/Desligar Sirene para veículos especiais",""
 "MAINPANELBTN_TOOLTIP","IOperateIt Revisited",""
 "DRIVEBTN_TOOLTIP","Começar a dirigir",""
 "SPAWNBTN_TEXT","Invocar Veículo",""
+"MODSETTINGSBTN_TEXT","Mod settings",""
 "ROAD_SELECT","Clique numa parte de uma estrada para começar a dirigir",""
