--- a/IOperateIt/Translations/en-EN.csv
+++ b/IOperateIt/Translations/en-EN.csv
@@ -17,3 +17,4 @@ DRIVEBTN_TOOLTIP,Start driving
 SPAWNBTN_TEXT,Spawn vehicle
 MODSETTINGSBTN_TEXT,Mod settings
 ROAD_SELECT,Select a road segment to start driving
+DRIVINGMODE,Driving mode
