--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -3,9 +3,14 @@
 "WHATSNEW_L2","请访问创意工坊或 GitHub 以获取详细更新日志。",""
 "WHATSNEW_L3","感谢您的使用及支持！",""
 "MOD_DESCRIPTION","在自己的城市中驾驶",""
+"SETTINGS_GROUP_GENERAL","通用设置",""
+"SETTINGS_GROUP_VEHICLE","车辆设置",""
+"SETTINGS_GROUP_CAMERA","摄像机设置",""
+"SETTINGS_GROUP_GAME","游戏性设置",""
+"SETTINGS_GROUP_KEYS","键位设置",""
 "SETTINGS_MAXVELOCITY","最大速度",""
-"SETTINGS_ACCELERATIONFORCE","加速度",""
-"SETTINGS_BREAKINGFORCE","转向制动力",""
+"SETTINGS_ENGINEPOWER","发动机功率",""
+"SETTINGS_BRAKINGFORCE","制动力",""
 "SETTINGS_BUILDINGCOLLISION","建筑碰撞",""
 "SETTINGS_VEHICLECOLLISION","车辆碰撞",""
 "SETTINGS_OFFSET","摄像机偏移",""
@@ -17,3 +22,4 @@
 "SPAWNBTN_TEXT","生成车辆",""
 "MODSETTINGSBTN_TEXT","模组设置",""
 "ROAD_SELECT","选择一段道路以开始驾驶",""
+"DRIVINGMODE","驾驶模式",""
