--- a/IOperateIt/Translations/zh-CN.csv
+++ b/IOperateIt/Translations/zh-CN.csv
@@ -11,6 +11,22 @@
 "SETTINGS_MAXVELOCITY","最大速度",""
 "SETTINGS_ENGINEPOWER","发动机功率",""
 "SETTINGS_BRAKINGFORCE","制动力",""
+SETTINGS_DOWNFORCE,下压力,
+SETTINGS_DRIVEBIAS,驱动偏置,
+SETTINGS_DRIVEBIAS_DETAIL,"定义车辆是前驱、后驱、或四驱。
+0 = 完全前驱，1 = 完全后驱；
+介于两者之间的数值表示四驱的前后动力分配比例。"
+SETTINGS_BRAKEBIAS,制动偏置
+SETTINGS_BRAKEBIAS_DETAIL,"前后轮之间的制动力分配。
+0 = 全前轮制动，1 = 全后轮制动。"
+SETTINGS_GRIPOVERMATCH,抓地力过载补正
+SETTINGS_GRIPCOEFFS,静抓地系数
+SETTINGS_GRIPCOEFFK,动抓地系数
+SETTINGS_SPRINGDAMP,弹簧阻尼
+SETTINGS_SPRINGOFFSET,弹簧预设偏移
+SETTINGS_MASSFACTOR,质量因子
+SETTINGS_MASSCENTERHEIGHT,重心高度
+SETTINGS_MASSCENTERBIAS,重心前后偏置
 "SETTINGS_BUILDINGCOLLISION","建筑碰撞",""
 "SETTINGS_VEHICLECOLLISION","车辆碰撞",""
 "SETTINGS_OFFSET","摄像机偏移",""
